<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageButton
            android:id="@+id/btnFavorited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/star_off" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:maxLines="2"
            android:text="@string/details_title"
            app:layout_constraintBottom_toTopOf="@+id/tvUserRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toBottomOf="@+id/btnFavorited"
            tools:text="@string/details_title" />

        <TextView
            android:id="@+id/tvUserRating"
            android:layout_width="125dp"
            android:layout_height="17dp"
            android:layout_marginTop="8dp"
            android:text="@string/details_user_rating"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="@string/details_user_rating" />

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:text="@string/details_release_date"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            tools:text="@string/details_release_date" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginTop="8dp"
            android:text="@string/releaseDateLabel"
            app:layout_constraintStart_toStartOf="@+id/tvUserRating"
            app:layout_constraintTop_toBottomOf="@+id/tvUserRating" />

        <TextView
            android:id="@+id/tvPlotSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/details_plot_synopsis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toBottomOf="@+id/ivMoviePoster" />

        <ListView
            android:id="@+id/trailers_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:nestedScrollingEnabled="true"
            android:paddingHorizontal="4dp"
            android:paddingVertical="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlotSynopsis" />

        <ListView
            android:id="@+id/reviews_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="4dp"
            android:nestedScrollingEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailers_listview" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>